# IntCube

./: .gitignore  settings.gradle
OpenCV/: build.gradle
OpenCV/java/src/org/opencv/android/: CameraBridgeViewBase.java
app/: build.gradle
app/src/androidTest/java/com/example/intcube/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: piece_fragment.glsl  piece_vertex.glsl  simple_fragment.glsl  simple_vertex.glsl
app/src/main/assets/html/2x2/: 2x2.html
app/src/main/assets/html/3x3/: 3x3.html
app/src/main/assets/html/4x4/: 4x4.html
app/src/main/assets/html/Axis/: Axis.html
app/src/main/assets/html/Help/: index.html
app/src/main/java/com/example/intcube/: AxisCube.java  AxisMI.java  Cube.java  Cube2x2.java  Cube3x3.java  CubeActivity.java  CubeGLRenderer.java  CubeGLView.java  CubeMI.java  CubeManualInput.java  Cubie.java  CubieColor.java  Guide2x2Activity.java  Guide3x3Activity.java  Guide4x4Activity.java  GuideActivity.java  GuideAxisActivity.java  HelpActivity.java  MainActivity.java  ScanActivity.java  ScanAxisColorActivity.java  ScanColorActivity.java  ScanColorSqrActivity.java  ScanColorsPresetActivity.java  ScanColorsSqr2Activity.java  ScanTypeActivity.java  SelectColorsActivity.java  SelectTypeActivity.java  SettingAxisActivity.java  SettingsActivity.java  SolutionActivity.java
app/src/main/res/drawable/: bo_center.xml  bo_corner.xml  border_button.xml  br_edge_lda.xml  br_edge_rda.xml  by_center.xml  center.xml  element_empty.xml  go_edge_lda.xml  go_edge_rda.xml  gr_corner.xml  gw_corner.xml  one_color_corner.xml  one_color_corner_but.xml  one_color_corner_fv.xml  one_color_edge_but.xml  one_color_edge_lda.xml  one_color_edge_rda.xml  radius_gray.xml  radius_green.xml  radius_orange.xml  radius_red.xml  radius_transparent.xml  radius_yellow.xml  rg_center.xml  rw_corner.xml  three_color_corner.xml  three_color_corner_but.xml  two_color_edge_but.xml  two_color_edge_lda.xml  two_color_edge_rda.xml  wb_edge_lda.xml  wb_edge_rda.xml  wg_center.xml  wo_edge_lda.xml  wo_edge_rda.xml  wr_center.xml  yb_corner.xml  yg_edge_lda.xml  yg_edge_rda.xml  (+4 more)
app/src/main/res/layout/: activity_cube.xml  activity_guide.xml  activity_guide_2x2.xml  activity_guide_3x3.xml  activity_guide_4x4.xml  activity_guide_axis.xml  activity_help.xml  activity_main.xml  activity_scan_color.xml  activity_scan_color_sqr.xml  activity_scan_color_sqr_2.xml  activity_scan_colors_preset.xml  activity_scan_type.xml  activity_select_colors.xml  activity_select_type.xml  activity_setting_axis.xml  activity_settings.xml  activity_solution.xml  sample_cube_g_l_view.xml
app/src/main/res/menu/: window_info_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: attrs_cube_g_l_view.xml  colors.xml  logo_background.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: styles.xml  themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/example/intcube/: ExampleUnitTest.java
cube-lib/: CMakeLists.txt
cube-lib/cube-app/: CMakeLists.txt  main.cpp
cube-lib/src/: axis_cube.cpp  axis_cube.hpp  cube.cpp  cube.hpp  cube_vertex.glsl  cubie.cpp  cubie.hpp  file_manager.hpp  gl_helpers.cpp  gl_helpers.hpp  main.cpp  mesh.cpp  mesh.hpp  piece.cpp  piece.hpp  piece_fragment.glsl  piece_vertex.glsl  puzzle.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  simple_fragment.glsl  simple_vertex.glsl  vertex.glsl
cube-lib/src/include/glad/: gl.h
gradle/wrapper/: gradle-wrapper.properties
